@@ -6,18 +6,18 @@ export EINA_PLUGINS_PATH="`dirname $0`/tools/plugins:"
 
 rm -rf -- "`dirname $0`/tools/plugins"
 mkdir -p "`dirname $0`/tools/plugins"
-for PLUGIN_DIR in $(find "`dirname $0`/plugins" -maxdepth 1 -type d | tail -n +2 | grep -v svn)
+for PLUGIN_DIR in $(find "`dirname $0`/plugins" -maxdepth 1 -type d 2>/dev/null | tail -n +2 | grep -v svn)
 do
 	D="$(dirname -- $0)/tools/plugins"
 	B="$(basename -- $PLUGIN_DIR)"
 	mkdir -p "$D/$B"
-	for SO in $(find $PLUGIN_DIR/.libs -type f -name '*.so')
+	for SO in $(find $PLUGIN_DIR/.libs -type f -name '*.so' 2>/dev/null)
 	do
-		ln -s "../../../plugins/$B/.libs/$(basename -- "$SO")" "$D/$B"
+		ln -fs "../../../plugins/$B/.libs/$(basename -- "$SO")" "$D/$B"
 	done
-	for F in $(find $PLUGIN_DIR -iname '*.gtkui' -o -iname '*.glade' -o -iname '*.png' )
+	for F in $(find $PLUGIN_DIR -iname '*.gtkui' -o -iname '*.glade' -o -iname '*.png' 2>/dev/null)
 	do
-		ln -s "../../../plugins/$B/$(basename -- "$F")" "$D/$B"
+		ln -fs "../../../plugins/$B/$(basename -- "$F")" "$D/$B"
 	done
 done
 
@@ -36,7 +36,7 @@ if [ ! -z "$1" ]; then
 			gdb --args "`dirname $0`/eina/eina" "$@"
 			;;
 		*)
-			"`dirname $0`/src/eina" "$@"
+			"`dirname $0`/eina/eina" "$@"
 			;;
 	esac
 else 
